--- a/templates/main.html
+++ b/templates/main.html
@@ -29,7 +29,8 @@
                     </div>
                     <div class="form-group">
                         <label for="exampleFormControlTextarea1">Tell me about yourself</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" minlength="100" name="Text"></textarea>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" minlength="100"
+                            name="Text"></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
@@ -38,8 +39,9 @@
     </div>
     <br><br>
     <div class="jumbotron text-center" style="margin-bottom:0">
-        <p>I am <a href="https://www.linkedin.com/in/huzaifsayed/">Huzaif Sayyed</a> and love to play with data.</p>
-        <p>This app is made using <a href="https://www.ibm.com/watson/services/personality-insights/" >IBM Watson Personality Insights</a>.</p>
+        <p>I am <a href="https://www.linkedin.com/in/shivamborse/">Shivam borse</a> </p>
+        <p>This app is made using <a href="https://www.ibm.com/watson/services/personality-insights/">IBM Watson
+                Personality Insights</a>.</p>
     </div>
 
 </body>
